<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/tittle"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/our_menu"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

        <Button
            android:text="@string/cold_drinks"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/first_gradient"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:id="@+id/button_cold_drinks"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

        <Button
            android:text="@string/hot_drinks"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/first_gradient"
            android:layout_marginLeft="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:id="@+id/button_hot_drinks"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

        <Button
            android:text="@string/sweets"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/second_gradient"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:id="@+id/button_sweets"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

        <Button
            android:text="@string/salties"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/second_gradient"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:id="@+id/button_salties"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

        <Button
            android:text="@string/combos"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/third_gradient"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

        <Button
            android:text="@string/personalized"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:background="@drawable/third_gradient"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/buttonText"
            android:paddingVertical="@dimen/paddingButton"/>

    </GridLayout>


</LinearLayout>