<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/the_cheezery"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purpleishGrey">

        <TextView
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:textSize="@dimen/titleSize"
            android:textAlignment="center"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:paddingHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@string/light"
            android:textColor="@color/dustyWhite"
            android:textSize="@dimen/regText"
            android:textAlignment="center"
            android:textStyle="italic"
            />

        <Button
            android:id="@+id/buttonp"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/get_started"
            android:textColor="@color/dustyWhite" />

    </LinearLayout>
</LinearLayout>